policy-library/policies/templates/gcp_gke_container_optimized_os.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Enforce container optimized OS on GKE clusters
# https://cloud.google.com/container-optimized-os/docs/

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-container-optimized-os-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKEContainerOptimizedOSConstraintV1
      validation:
        openAPIV3Schema:
          properties:
            cos_containerd_allowed:
              type: boolean
              description: "If true, the constraint allows COS_CONTAINERD as an acceptable
                Container Optimized OS image."
  targets:
    validation.gcp.forsetisecurity.org:
      rego: |
        #
        # Copyright 2022 Google LLC
        #
        # Licensed under the Apache License, Version 2.0 (the "License");
        # you may not use this file except in compliance with the License.
        # You may obtain a copy of the License at
        #
        #     https://www.apache.org/licenses/LICENSE-2.0
        #
        # Unless required by applicable law or agreed to in writing, software
        # distributed under the License is distributed on an "AS IS" BASIS,
        # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        # See the License for the specific language governing permissions and
        # limitations under the License.
        #

        package templates.gcp.GCPGKEContainerOptimizedOSConstraintV1

        import data.validator.gcp.lib as lib

        deny[{
        	"msg": message,
        	"details": metadata,
        }] {
        	constraint := input.constraint
        	asset := input.asset
        	asset.asset_type == "container.googleapis.com/Cluster"
        	lib.get_constraint_params(constraint, params)
        	containerd_allowed = lib.get_default(params, "cos_containerd_allowed", false)

        	cluster := asset.resource.data
        	node_pools := lib.get_default(cluster, "nodePools", [])
        	node_pool := node_pools[_]
        	not cos_image(node_pool, containerd_allowed)

        	message := sprintf("Cluster %v has node pool %v without Container-Optimized OS.", [asset.name, node_pool.name])
        	metadata := {"resource": asset.name}
        }

        ###########################
        # Rule Utilities
        ###########################
        cos_image(node_pool, containerd_allowed) {
        	nodeConfig := lib.get_default(node_pool, "config", {})
        	imageType := lib.get_default(nodeConfig, "imageType", "")
        	imageType == "COS"
        }

        cos_image(node_pool, containerd_allowed) {
        	containerd_allowed
        	nodeConfig := lib.get_default(node_pool, "config", {})
        	imageType := lib.get_default(nodeConfig, "imageType", "")
        	imageType == "COS_CONTAINERD"
        }
        #ENDINLINE
